Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -11,4 +11,9 @@ blocks:
         - name: docker build
           commands:
             - checkout
-            - docker build .
+            - 'docker build '
+promotions:
+  - name: Deploy to DockerHub
+    pipeline_file: deploy.yml
+    auto_promote:
+      when: (branch = 'master' OR tag =~ '.*') AND result = 'passed'
